@@ -1,3 +1,7 @@
+20190829
+--------
+- #44505 - Feature to include a column in base view to store the filenames
+
 20190814
 --------
 - #44403 - Add the denodo-hadoop-commons source file
